# uc-intg-firetv

./: Dockerfile  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
uc_intg_firetv/: __init__.py  apps.py  client.py  config.py  driver.py  remote.py
